fix: overflow-x hidden eklendi

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -21,6 +21,7 @@ body {
   margin: 0;
   background-color: #121212;
   color: #ffffff;
+  overflow-x: hidden;
 }
 
 main {
